--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -6,12 +6,20 @@ project (GDSGadgets)
 set (CMAKE_INCLUDE_CURRENT_DIR ON)
 set (CMAKE_AUTOMOC ON)
 
+option(BUILD_TEST "Whether to build the test exectable or not." OFF)
+
 find_package(Qt5Gui)
 FIND_PACKAGE(Qt5Widgets)
 
-add_executable(testGDSGadgets main.cpp)
+
 add_library(libGDSGadgets 
-    boundingrect.cpp boundingrect.h)
+	boundingrect.cpp boundingrect.h)
 
 target_link_libraries(libGDSGadgets Qt5::Gui)
-TARGET_LINK_LIBRARIES(testGDSGadgets Qt5::Widgets Qt5::Gui)
+
+
+if (BUILD_TEST)
+	add_executable(testGDSGadgets main.cpp)
+	TARGET_LINK_LIBRARIES(testGDSGadgets Qt5::Widgets Qt5::Gui)
+else()
+endif()
